content/dota_addons/dota_imba_reborn/panorama/styles/custom_game/battlepass.css
/* ... */
.imbar-rank-wrapper {
	width: 30%;
	flow-children:  right;
	align: center center;
}
.imbar-rank
{
	margin-top: 2px;
	font-size: 14px;
	color: white;
	vertical-align: center;
	horizontal-align: left;
	text-align: left;
	opacity: 1;
	text-transform: uppercase;
	border-radius: 5px;
	margin-left: 8px;

	text-shadow: 1px 1px 2px 3.0 #00000030;
}

.imbar-rank-cicle {
	width: 12px;
	height: 12px;
	align:  center center;
	border-radius: 50%;
	opacity: 0.9;
	box-shadow: 0px 0px 2px 0px #00000085;
	brightness: 0.9;
}

.imbar-xp
{
	width: 40%;
	margin-top: 2px;
	margin-right: 18px;
	font-size: 16px;
	color: white;
	vertical-align: center;
	horizontal-align: right;
	text-align: right;
	opacity: 1;
	letter-spacing: 0.5px;
	text-shadow: 1px 1px 2px 2.0 #00000030;
}

.LeaderboardInGamePlayers {
	width: 100%;
	flow-children: right;
}

/* Labels */
.HoldoutLabelSmall
{
	color: #b2baaf;
	text-transform: uppercase;
	text-align: center;

	font-family: Radiance,FZKai-Z03,TH Sarabun New,YDYGO 540;
	letter-spacing: 2px;
	text-overflow: clip;

	align: center center;
	text-align: center;	
	text-shadow: 1px 1px 2px 3.0 #000000ee;
	font-size: 22px;
}

.HoldoutLabelSmall_alt
{
	color: white;
	font-weight: bold;
	text-align: center;
	text-shadow: 1px 1px 2px 2.0 #00000011;

	font-family: Radiance,FZKai-Z03,TH Sarabun New,YDYGO 540;
	font-size: 14px;
	letter-spacing: 2px;
	text-overflow: clip;

	horizontal-align: center;
	text-align: center;	
	margin-bottom: 12px;
	text-shadow: 1px 1px 2px 3.0 #000000;
}

.HoldoutLabelSmall.Header
{
	width: 95px;
}

#RoshanLevel_alt
{
	margin-top: 5%;
	margin-left: 2%;
	horizontal-align: left;
	color: white;
	font-weight: bold;
	text-align: center;
	text-shadow: 1px 1px 2px 2.0 #00000011;

	font-family: Radiance,FZKai-Z03,TH Sarabun New,YDYGO 540;
	letter-spacing: 2px;
	text-overflow: clip;

	text-align: center;
	text-shadow: 1px 1px 2px 3.0 #000000;
	font-size: 16px;
}

/* Game Info */
.GameModeValues
{
	width: 100%;
	margin-bottom: 20px;
	flow-children: right;
}

.GameModeLabelPanel
{
	width: 26%;
	margin-left: 3%;
	margin-right: 3%;
	flow-children: down;
}

.GameModeValuePanel
{
	width: 15%;
	margin-left: 2%;
	flow-children: down;
	font-size: 13px;
}

.Separator {
	width: 1px;
	height: 100%;
	background-color: #303e45bb;
}

.ImbaGameInfoLabel
{
	margin-top: 3px;
	horizontal-align: left;
	font-size: 14px;
	color: #a2a99e;
	vertical-align: top;
	letter-spacing: 1.5px;
	text-transform: uppercase;
	text-align: center center;
	text-shadow: 0px 0px 3px 2 #00000050;
	color: #a2a99e;
	line-height: 16px;
	/* color: #A3B5D0dd; */
}

#ComingSoonPanel, #TabTitlePanel {
	width: 70%;
	height: 40px;
	background-color: #39404855;
	align: left top;
	padding-left: 20px;	
}
#ComingSoon, #TabTitlePanel Label {
	color: #99a8ad;
	text-transform: uppercase;
	text-align: center center;
	font-size: 18px;
	align: left center;
	margin-top:  2px;
}

.BattlepassRow {
	width: 100%;
	height: 85px;
	margin-top: 5px;
	/* background-color: #000000ba; */
	horizontal-align: left;
	flow-children: right;
/*	overflow: noclip scroll; */
}

.BattlepassReward {
	width: 74px;
	height: 84px;
	margin-left: 2px;
	margin-right: 2px;
	flow-children: down;
}

.BattlepassRewardIcon {
	width: 74px;
	height: 64px;
	border: 1px solid #38424b;
	box-shadow: 0px 2px 6px 0px #000000a5;
	vertical-align: top;
	background-position: 0px 0px;
	background-size: 74px 64px;
}

.BattlepassRewardIcon_locked {
	wash-color: #000000a0;
	brightness: 0.6;
}

.BattlepassRewardHeroIcon {
	width: 25px;
	height: 25px;
	horizontal-align: right;
	background-size: cover;
}
.BattlepassReward:hover .BattlepassRewardPanelUnlocked {
	opacity: 1;
}
.BattlepassRewardLabel {
	width: 92%;
	horizontal-align: left;
	font-size: 12px;
	vertical-align: top;
	letter-spacing: 1px;
	align: center center;
	text-transform: uppercase;
	text-align: center center;
	text-shadow: 0px 0px 3px 3 #00000070;
	color: #99a8ad;
	box-shadow: 0px 1px 8px 0px #000000a2;
	width: 100%;
}
.BattlepassRewardLabel.unlocked {
	background-color: #2a3440;
	border: 1px solid #1c2328;
	border-top: 0;
	margin-top:  -2px;
	box-shadow: 0px 0 0 0px #00000000;
}
.BattlepassRewardLabel.locked {
	background-color: #282a2d;
	border-color: #1c2328;
	margin-top:  -2px;
}

.BattlepassRewardLabelLocked {
	width: 92%;
	horizontal-align: left;
	font-size: 10px;
	vertical-align: top;
	letter-spacing: 1px;
	align: center center;
	text-transform: uppercase;
	text-align: center center;
	text-shadow: 0px 0px 3px 3 #000000a5;
	color: red;
	brightness:  1.5;
}

.BattlepassRewardPanelUnlocked {
	opacity: 0;
	width: 100%;
	height: 100%;
	background-color: #000000db;
}

.BattlepassRewardLabelUnlocked {
	font-size: 11px;
	letter-spacing: 1px;
	padding: 0 5px;
	align: center center;
	text-transform: uppercase;
	text-align: center center;
	text-shadow: 0px 0px 4px 4 #000000a5;
	color: #b8c5ca;
	align: center center;
	line-height: 14px;
}

#PatreonTableWrapper,
#CompanionTableWrapper,
#StatueTableWrapper {
	overflow: squish scroll;
	flow-children: down;
	height: 470px;
	width: 100%;
	visibility: collapse;
}

#CompanionTableWrapper {
	visibility: visible;
}

.DonatorRow {
	width: 100%;
	height: 185px;
	margin-top: 5px;
	margin-bottom: 3px;
	horizontal-align: left;
	flow-children: right;
/*	overflow: noclip scroll; */
}

.DonatorReward {
	width: 153px;
	height: 100%;
	margin-left: 2px;
	margin-right: 2px;
	flow-children: down;
	background-color: #000000;
}
.DonatorReward Button {
	background-color: gradient( linear, 0% 0%, 0% 100%, from( #021419 ), to( #1a2b30 ) );
	align: center center;
	margin-top:  12px;
	border-bottom: 1px solid #052730;
	border-right: 1px solid #052730;
	border-top: 1px solid #0c2831;
	border-left: 1px solid #0c2831;
}
.DonatorReward Label {
	color:  #b1b1b1;
	margin: 2px;
	font-size: 13px;
	letter-spacing: 0.4px;
	box-shadow: none;
}

.DonatorReward:hover {
	background-color: #141617;
}

.DonatorReward:active {
	background-color: #000000aa;
}
/* ... */

